# reel2md

./: .gitignore  README.md  pyproject.toml
src/reel2md/: __init__.py  cli.py  doctor.py  pipeline.py
src/reel2md.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
